MOA hello world

--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "build": "yarn workspace @tlatc_app/react-app build --max-old-space-size=12288",
     "node": "cd packages/hardhat && npx hardhat node",
     "deploy_contracts_local": "cd packages/hardhat && npx hardhat run --network localhost scripts/deploy_local.js",
-    "deploy_contracts_rinkeby": "cd packages/hardhat && npx hardhat run --network rinkeby scripts/deploy.js",
+    "deploy_contracts_rinkeby": "cd packages/hardhat && npx hardhat run --network rinkeby scripts/deploy_rinkeby.js",
     "deploy_contracts_mainnet": "cd packages/hardhat && npx hardhat run --network mainnet scripts/deploy.js",
     "publish_contracts": "cd packages/hardhat && npx run scripts/publish.js",
     "test_contracts": "cd packages/hardhat && npx hardhat test",
-    "verify": "cd packages/hardhat && npx hardhat verify --network mainnet 0x600a4446094C341693C415E6743567b9bfc8a4A8 'Anchor Certificates' 'ACS' '0xaF69610ea9ddc95883f97a6a3171d52165b69B03' '1624888800' '1627308000'",
+    "verify": "cd packages/hardhat && npx hardhat verify --network mainnet 0x6dae8a922b66225de1728bd9e5f2b7a4bdd4699b 'Paintings of Forgotten Souls' 'SOULS' '0xaF69610ea9ddc95883f97a6a3171d52165b69B03' '0xec0ef86a3872829F3EC40de1b1b9Df54a3D4a4b3' '1632492000' '1634911200' '0x600a4446094C341693C415E6743567b9bfc8a4A8'",
     "start": "yarn workspace @tlatc_app/react-app start",
     "compile": "cd packages/hardhat && npx hardhat compile"
   },
   "devDependencies": {
-    "hardhat": "^2.2.1",
+    "hardhat": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.4",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.3",
